# multimedia-terminal-bench

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .worktreeinclude  ATTRIBUTIONS.md  DATASHEET.md  LICENSE  LICENSE_MATRIX.md  RAI_METADATA.md  README.md  REPRODUCE.md  VERSIONING.md  index.html  pyproject.toml
Docs/: getting-started.md  harbor-reference.md
datasets/mmtb-core/2-speaker-diarized-transcript-from-podcast-audio/: instruction.md  task.toml
datasets/mmtb-core/accessibility-sync-audit/: instruction.md  media.toml  task.toml
datasets/mmtb-core/adr-edit-detection/: instruction.md  media.toml  task.toml
datasets/mmtb-core/animation-narration-audit/: instruction.md  media.toml  task.toml
demo/: index.html
demo/_astro/: index.DgfPtnaA.css
demo/stats/: index.html
mmtb_runtime/: __init__.py
mmtb_runtime/agent/: __init__.py  _max_tokens.py  _tool_call_recovery.py  codex_oauth.py  prompt-template-a.txt  prompt-template-av.txt  prompt-template-ia.txt  prompt-template-iv.txt  prompt-template-v.txt  prompt-template.txt  terminus_a.py  terminus_av.py  terminus_ia.py  terminus_iv.py  terminus_kira.py  terminus_mm.py  terminus_v.py
scripts/: download_media.py  download_media.sh  run_claude_code.sh  run_claude_code_oauth.sh  run_codex_cli.sh  run_terminus_a.sh  run_terminus_av.sh  run_terminus_ia.sh  run_terminus_iv.sh  run_terminus_kira.sh  run_terminus_mm.sh  run_terminus_v.sh  sync_task_env.py  upload_media.sh  validate_task.sh  validate_task_structure.py
tests/: test_terminus_kira.py  test_terminus_mm.py  test_tool_call_recovery.py
(+821 files in other folders)
