[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmtb-runtime"
version = "0.1.0"
description = "MultiMedia-TerminalBench — benchmark for terminal agents with multimedia perception"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Chiyeong Heo" },
    { name = "Jaechang Kim" },
    { name = "Junhyuk Kwon" },
    { name = "Hoyoung Kim" },
    { name = "Dongmin Park" },
    { name = "Jonghyun Lee" },
    { name = "Jungseul Ok" },
]
dependencies = [
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
agent = ["harbor>=0.1.44", "litellm", "tenacity"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# litellm.suppress_debug_info must be set between `import litellm` and
# subsequent imports — E402 (module-level import not at top) is expected.
"mmtb_runtime/agent/terminus_mm.py" = ["E402"]
"mmtb_runtime/agent/terminus_kira.py" = ["E402"]
